Deferred extern jvm 1