@@ -11,19 +11,19 @@ import com.zarbosoft.alligatoroid.compiler.mortar.MortarCode;
 import com.zarbosoft.alligatoroid.compiler.mortar.MortarTargetModuleContext;
 import com.zarbosoft.rendaw.common.Assertion;
 import com.zarbosoft.rendaw.common.Common;
-import com.zarbosoft.rendaw.common.Format;
 import com.zarbosoft.rendaw.common.ROList;
 import com.zarbosoft.rendaw.common.ROPair;
+import com.zarbosoft.rendaw.common.ReverseIterable;
 import com.zarbosoft.rendaw.common.TSList;
 import com.zarbosoft.rendaw.common.TSMap;
 import com.zarbosoft.rendaw.common.TSSet;
 
-import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.WeakHashMap;
 import java.util.concurrent.CompletableFuture;
@@ -33,7 +33,8 @@ import static com.zarbosoft.rendaw.common.Common.uncheck;
 
 public class CompilationContext {
   public static final String METHOD_NAME = "enter";
-  public static final String METHOD_DESCRIPTOR = JVMDescriptor.func(JVMDescriptor.voidDescriptor());
+  public static final String METHOD_DESCRIPTOR = JVMDescriptor.func(JVMDescriptor.VOID_DESCRIPTOR);
+  public static final String GENERATED_CLASS_PREFIX = "com.zarbosoft.alligatoroidmortar.Generated";
   public static long uniqueClass = 0;
   /*public final ExecutorService executor =
   new ThreadPoolExecutor(1, Integer.MAX_VALUE, 1, TimeUnit.SECONDS, new SynchronousQueue<>());*/
@@ -51,43 +52,43 @@ public class CompilationContext {
   public static void processError(Module module, Throwable e) {
     if (e instanceof Common.UncheckedException) {
       processError(module, e.getCause());
-    } else if (e instanceof InvocationTargetException) {
-      processError(module, e.getCause());
     } else if (e instanceof MultiError) {
       module.log.errors.addAll(((MultiError) e).errors);
     } else {
-      module.log.errors.add(Error.unexpected(module.id, e));
+      Location location = null; // TODO convert whole stack?
+      for (StackTraceElement t : new ReverseIterable<>(Arrays.asList(e.getStackTrace()))) {
+        if (t.getClassName().startsWith(GENERATED_CLASS_PREFIX)) {
+          location = module.sourceMapReverse.get(t.getLineNumber());
+          break;
+        }
+      }
+      if (location != null) {
+        if (e instanceof Error.PreError) {
+          module.log.errors.add(((Error.PreError) e).toError(location));
+        } else {
+          module.log.errors.add(Error.unexpectedAt(location, e));
+        }
+      } else {
+        module.log.errors.add(Error.unexpected(e));
+      }
     }
   }
 
   public void loadRootModule(String path) {
     if (!Paths.get(path).isAbsolute()) throw new Assertion();
-    LocalModuleId moduleId = new LocalModuleId(path);
-    ImportSpec importSpec = new ImportSpec(moduleId);
-    uncheck(
-        () ->
-            loadModule(
-                    null,
-                    null,
-                    null,
-                    importSpec,
-                    new LoadModuleInner() {
-                      @Override
-                      public Value load(Module module) {
-                        return compile(module, Paths.get(moduleId.path));
-                      }
-                    })
-                .get());
+    ImportResult res = loadModule(null, new ImportSpec(new LocalModuleId(path)));
+    if (res.error != null) throw new Assertion();
+    uncheck(() -> res.value.get());
   }
 
-  private Value compile(Module module, Path sourcePath) {
-    String className = Format.format("com.zarbosoft.alligatoroidmortar.Generated%s", uniqueClass++);
+  private <T> Value compile(Module module, Path sourcePath) {
+    String className = GENERATED_CLASS_PREFIX + uniqueClass++;
     // Do first pass flat evaluation
     MortarTargetModuleContext targetContext =
         new MortarTargetModuleContext(JVMDescriptor.jvmName(className));
     Context context = new Context(module, targetContext, new Scope(null));
     ROList<Value> rootStatements =
-        new LanguageDeserializer(module.id).deserialize(module.log.errors, sourcePath);
+        new LanguageDeserializer(module.spec.moduleId).deserialize(module.log.errors, sourcePath);
     if (rootStatements == null) return ErrorValue.error;
     EvaluateResult.Context ectx = new EvaluateResult.Context(context, null);
     MortarTargetModuleContext.LowerResult lowered =
@@ -127,103 +128,92 @@ public class CompilationContext {
     return lowered.dataType.unlower(uncheck(() -> klass.getMethod(METHOD_NAME).invoke(null)));
   }
 
-  public Future<Value> loadLocalModule(Context context, Location location, String path) {
-    if (!Paths.get(path).isAbsolute()) throw new Assertion();
-    LocalModuleId moduleId = new LocalModuleId(path);
-    ImportSpec importSpec = new ImportSpec(moduleId);
-    return loadModule(
-        context.module.log,
-        context.module.importPath,
-        location,
-        importSpec,
-        new LoadModuleInner() {
-          @Override
-          public Value load(Module module) {
-            Path sourcePath = Paths.get(moduleId.path);
+  private Value loadModuleInner(Module module) {
+    ImportSpec importSpec = module.spec;
 
-            // Try to load from cache
-            String sourceHash;
-            {
-              byte[] sourceBytes;
+    // Try to load from cache
+    String sourceHash =
+        importSpec.moduleId.dispatch(
+            new ModuleId.Dispatcher<String>() {
+              @Override
+              public String handle(LocalModuleId id) {
+                Path sourcePath = Paths.get(id.path);
+                byte[] sourceBytes;
+                try {
+                  sourceBytes = Files.readAllBytes(sourcePath);
+                } catch (NoSuchFileException e) {
+                  module.log.errors.add(Error.deserializeMissingSourceFile(sourcePath));
+                  return null;
+                } catch (Throwable e) {
+                  processError(module, e);
+                  return null;
+                }
+                return new Utils.SHA256().add(sourceBytes).buildHex();
+              }
+            });
+    if (sourceHash == null) return ErrorValue.error;
+    Path relCachePath = cache.ensureCachePath(module.log.warnings, importSpec);
+    Path hashPath = cache.cachePath(relCachePath).resolve("hash");
+    String outputHash =
+        uncheck(
+            () -> {
               try {
-                sourceBytes = Files.readAllBytes(sourcePath);
+                return Files.readString(hashPath);
               } catch (NoSuchFileException e) {
-                module.log.errors.add(Error.deserializeMissingSourceFile(sourcePath));
-                return ErrorValue.error;
-              } catch (Throwable e) {
-                processError(module, e);
-                return ErrorValue.error;
+                return null;
               }
-              sourceHash = new Utils.SHA256().add(sourceBytes).buildHex();
-            }
-            Path relCachePath = cache.ensureCachePath(module.log.warnings, moduleId);
-            Path hashPath = cache.cachePath(relCachePath).resolve("hash");
-            String outputHash =
-                uncheck(
-                    () -> {
-                      try {
-                        return Files.readString(hashPath);
-                      } catch (NoSuchFileException e) {
-                        return null;
-                      }
-                    });
-            if (sourceHash.equals(outputHash)) {
-              Value out = cache.loadOutput(module.log.warnings, relCachePath);
-              if (out != ErrorValue.error) {
-                return out;
+            });
+    if (sourceHash.equals(outputHash)) {
+      Value out = cache.loadOutput(module.log.warnings, relCachePath);
+      if (out != ErrorValue.error) {
+        return out;
+      }
+    }
+
+    // Cache data bad - compile
+    Value out =
+        importSpec.moduleId.dispatch(
+            new ModuleId.Dispatcher<Value>() {
+              @Override
+              public Value handle(LocalModuleId id) {
+                return compile(module, Paths.get(id.path));
               }
-            }
+            });
 
-            // Cache data bad - compile
-            Value out = compile(module, Paths.get(moduleId.path));
+    // Cache result
+    if (out != ErrorValue.error) {
+      cache.writeOutput(module.log.warnings, relCachePath, out);
+      try {
+        Files.writeString(hashPath, sourceHash);
+      } catch (Throwable e) {
+        module.log.warnings.add(Error.unexpected(e));
+      }
+    }
 
-            // Cache result
-            if (out != ErrorValue.error) {
-              cache.writeOutput(moduleId, module.log.warnings, relCachePath, out);
-              try {
-                Files.writeString(hashPath, sourceHash);
-              } catch (Throwable e) {
-                module.log.warnings.add(Error.unexpected(module.id, e));
-              }
-            }
-
-            return out;
-          }
-        });
+    return out;
   }
 
-  private Future<Value> loadModule(
-      Log log,
-      ImportPath fromImportPath,
-      Location location,
-      ImportSpec importSpec,
-      LoadModuleInner inner) {
+  public ImportResult loadModule(ImportPath fromImportPath, ImportSpec importSpec) {
     synchronized (modulesLock) {
       if (fromImportPath != null) {
-        TSList<ImportSpec> found = fromImportPath.find(new TSSet<>(),importSpec);
+        TSList<ImportSpec> found = fromImportPath.find(new TSSet<>(), importSpec);
         if (found != null) {
-          log.errors.add(Error.importLoop(location, found));
-          CompletableFuture<Value> out = new CompletableFuture<>();
-          out.complete(ErrorValue.error);
-          return out;
+          return ImportResult.err(new ImportErrorLoop(found));
         }
       }
       Module module = modules.getOpt(importSpec);
       if (module == null) {
-        CompletableFuture<Value> result =
-            new CompletableFuture<>() {
-              ModuleId p = importSpec.moduleId;
-            };
+        CompletableFuture<Value> result = new CompletableFuture<>();
         ImportPath importPath = new ImportPath(importSpec);
         if (fromImportPath != null) importPath.from.add(fromImportPath);
-        module = new Module(importSpec.moduleId, importPath, this, result);
+        module = new Module(importSpec, importPath, this, result);
         modules.put(importSpec, module);
         Module finalModule = module;
         Thread thread =
             new Thread(
                 () -> {
                   try {
-                    Value value = inner.load(finalModule);
+                    Value value = loadModuleInner(finalModule);
                     finalModule.result.complete(value);
                   } catch (Throwable e) {
                     processError(finalModule, e);
@@ -235,12 +225,9 @@ public class CompilationContext {
           threads.put(thread, null);
         }
       } else {
-        TSList<ImportSpec> found = module.importPath.findBefore(new TSSet<>(),importSpec);
+        TSList<ImportSpec> found = module.importPath.findBefore(new TSSet<>(), importSpec);
         if (found != null) {
-          log.errors.add(Error.importLoop(location, found));
-          CompletableFuture<Value> out = new CompletableFuture<>();
-          out.complete(ErrorValue.error);
-          return out;
+          return ImportResult.err(new ImportErrorLoop(found));
         }
         if (fromImportPath != null) {
           boolean inFrom = false;
@@ -253,7 +240,7 @@ public class CompilationContext {
           if (!inFrom) module.importPath.from.add(fromImportPath);
         }
       }
-      return module.result;
+      return ImportResult.ok(module.result);
     }
   }
 
@@ -275,19 +262,34 @@ public class CompilationContext {
     return modules;
   }
 
-  public Future<Value> loadRelativeModule(Context context, Location location, String path) {
-    return context.module.id.dispatch(
-        new ModuleId.Dispatcher<Future<Value>>() {
-          @Override
-          public Future<Value> handle(LocalModuleId id) {
-            return loadLocalModule(
-                context, location, Paths.get(id.path).resolveSibling(path).normalize().toString());
-          }
-        });
+  public static class ImportResult {
+    public final Error.PreError error;
+    public final Future<Value> value;
+
+    private ImportResult(Error.PreError error, Future<Value> value) {
+      this.error = error;
+      this.value = value;
+    }
+
+    public static ImportResult ok(Future<Value> value) {
+      return new ImportResult(null, value);
+    }
+
+    public static ImportResult err(Error.PreError error) {
+      return new ImportResult(error, null);
+    }
   }
 
-  @FunctionalInterface
-  interface LoadModuleInner {
-    Value load(Module module);
+  public static class ImportErrorLoop extends Error.PreError {
+    public final TSList<ImportSpec> loop;
+
+    public ImportErrorLoop(TSList<ImportSpec> loop) {
+      this.loop = loop;
+    }
+
+    @Override
+    public Error toError(Location location) {
+      return Error.importLoop(location, loop);
+    }
   }
 }
